[package]
name = "metagenomics_deseq2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command-line argument parsing
clap = { version = "4.5.35", features = ["derive"] }

# Bioinformatics crates
bio = "2.2.0"        # General bioinformatics library (might need specific features)
needletail = "0.6.3" # FASTQ/FASTA parsing
# nthash = "0.1" # k-mer hashing (if used directly)

# Data handling and numerical computing
ndarray = "0.16.1"  # N-dimensional arrays
nalgebra = "0.33.2" # Linear algebra (potentially for stats)
sprs = "0.11.3"     # Sparse matrices (if count tables are sparse)
csv = "1.3.1"       # Reading/writing CSV files

# Statistics

rand = "0.9.0"
linfa = { version = "0.7.0" }
statrs = "0.18.0"             # Statistical distributions and functions
# Add specific linfa backends if needed, e.g., linfa-linear

# Sketching
# Add specific sketching libraries if used, e.g., sourmash's Rust bindings if available, or custom implementation

# Utility crates
serde = { version = "1.0.219", features = [
    "derive",
] } # Serialization/Deserialization
serde_json = "1.0.140" # JSON support (if needed)
rayon = "1.10.0" # Data parallelism
log = "0.4.27" # Logging facade
env_logger = "0.11.8" # Logging implementation
anyhow = "1.0.97" # Error handling
thiserror = "2.0.12" # Error enum derivation
indexmap = "2.9.0" # Hash map that preserves insertion order (useful for tables)
itertools = "0.14.0" # Iterator adaptors

# Compression (based on needletail features)
flate2 = "1.1.1"
bzip2 = "0.5.2"
zstd = "0.13.3"

# Other potential dependencies based on file names
# sled = "0.34" # Embedded database (if midas_db uses it)
# adaptive-partition = "..." # If sketch/adaptive.rs uses a specific crate
# bayesian-stats = "..." # If stats/bayesian.rs uses a specific crate


[dev-dependencies]
# Add testing dependencies here
