[package]
name = "strain_ahsp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = { version = "2.0.1", features = ["derive"] }
anyhow = "1.0.97"
thiserror = "2.0.12"

# CLI and logging
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"

# Concurrency and system
rayon = "1.10.0"
num_cpus = "1.16.0"

# Data structures and algorithms
indexmap = "2.9.0"
itertools = "0.14.0"

# Bioinformatics and sequence analysis
bio = "2.2.0"
needletail = "0.6.3"
nthash = "0.5.1"

# Numerical computing and statistics
ndarray = { version = "0.16.1", features = ["serde"] }
nalgebra = "0.33.2"
sprs = "0.11.3"
rand = "0.9.0"
linfa = { version = "0.7.0" }
statrs = "0.18.0"

# Storage and databases
sled = "0.34"
csv = "1.3.1"

# Networking and web
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
urlencoding = "2.1.3"
quick-xml = { version = "0.37.4", features = ["serialize"] }

# File operations and compression
tempfile = "3.19.1"
flate2 = "1.1.1"
bzip2 = "0.5.2"
zstd = "0.13.3"

# Testing
mockito = "1.7.0"

[dev-dependencies]
approx = "0.5"
